--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,76 @@
-.App {
+html {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-image: url(./images/background.png);
+  color: whitesmoke;
+}
+
+Header {
   text-align: center;
+  font-size: 30px;
+}
+
+.title {
+  color: yellow;
+  display: block;
+  text-align: center;
+  font-size: 30px;
+  border: 1px solid white;
+  border-radius: 10px;
+  margin-left: 2%;
+  margin-right: 2%;
+  padding: 16px;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.planetCard {
+  display: block;
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.picture {
+  width: 150px;
+}
+
+.planetCard:hover {
+  transform: scale(1.5);
+}
+
+.solarSystem {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.missionCard {
+  display: block;
+  text-align: center;
+  width: 180px;
+  height: 150px;
+  padding: 15px;
+  border: 1px solid white;
+  border-radius: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  
+}
+
+.missionCard:hover {
+  transform: scale(1.2);
+  background-color: black;
+}
+
+.missionName {
+  color: yellow;
+  font-weight: 700;
+  padding: 2px;
+  font-size: 15px;
+}
+
+.missions {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-left: 2%;
+  margin-right: 2%;
 }
